# FastDNS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fastdns.toml  install-fastdns.sh  test-fastdns.sh
.cargo/: audit.toml
.deepseek/state/: subagents.v1.json
.github/workflows/: ci.yml  release.yml
scripts/: benchmark.sh
scripts/macos/: com.fastdns.daemon.plist  com.fastdns.healthcheck.plist  install.sh  uninstall.sh
scripts/windows/: install.ps1  uninstall.ps1
src/: api.rs  blocklist.rs  config.rs  dot.rs  health.rs  main.rs  system_dns.rs  tls.rs
src/dns/: constants.rs  error.rs  mod.rs  types.rs  wire.rs
src/dnssec/: mod.rs  trust_anchor.rs
src/resolver/: cache.rs  mod.rs  recursive.rs  root_hints.rs
src/server/: tcp.rs  udp.rs
src/transport/: doh.rs  dot.rs  mod.rs
